log
Fri 06 Oct 2023 09:11:04 PM UTC: 
 tests:  0|5
total_score: 0/70
d8451bc
Sat 07 Oct 2023 12:08:25 AM UTC: 
 sudoku.c | 57 ++++++++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 42 insertions(+), 15 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:20: error: expected expression before ‘List’
   75 |           pushBack(List, nodo_adj);
      |                    ^~~~
sudoku.c:75:11: error: too few arguments to function ‘pushBack’
   75 |           pushBack(List, nodo_adj);
      |           ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
In file included from test.c:5:
sudoku.c:77:16: error: expected expression before ‘List’
   77 |         return List;
      |                ^~~~
Compilation failed
8e429b1
Sat 07 Oct 2023 12:08:45 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
c26317a
Sat 07 Oct 2023 12:11:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
585cd38
Sat 07 Oct 2023 12:11:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8fac1ee
Sat 07 Oct 2023 12:11:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bf43e6a
Sat 07 Oct 2023 12:11:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
95ad224
Sat 07 Oct 2023 12:14:25 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e3c491d
Sat 07 Oct 2023 12:19:44 AM UTC: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
9e1433e
Sat 07 Oct 2023 12:39:03 AM UTC: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:99:21: error: ‘n’ undeclared (first use in this function)
   99 |   push(lista_stack, n);
      |                     ^
sudoku.c:99:21: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:114:5: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
  114 |     while(nodo_adj != NULL);
      |     ^~~~~
sudoku.c:115:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
  115 |     {
      |     ^
cc1: all warnings being treated as errors
Compilation failed
65b9834
Sat 07 Oct 2023 12:39:24 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:99:21: error: ‘n’ undeclared (first use in this function)
   99 |   push(lista_stack, n);
      |                     ^
sudoku.c:99:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
030a4a2
Sat 07 Oct 2023 12:39:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
76d4aa1
Sat 07 Oct 2023 12:41:36 AM UTC: 
 sudoku.c | 23 -----------------------
 1 file changed, 23 deletions(-)
 tests:  3|3
total_score: 25/70
0a61052
Sat 07 Oct 2023 12:47:20 AM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:6: error: unused variable ‘sub_verf’ [-Werror=unused-variable]
   59 |   us sub_verf[9][10] = {0};
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
051debd
Sat 07 Oct 2023 12:47:29 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
ec43aa9
Sat 07 Oct 2023 12:51:19 AM UTC: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:84:30: error: expected expression before ‘{’ token
   84 |       filas_verf[i][valor] = {0};
      |                              ^
Compilation failed
c7b52de
Sat 07 Oct 2023 12:51:28 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
ef73662
Sat 07 Oct 2023 12:55:00 AM UTC: 
 sudoku.c | 58 +++++++++++++++++++++++++++++++---------------------------
 1 file changed, 31 insertions(+), 27 deletions(-)
 tests:  3|3
total_score: 25/70
6d2b493
Sat 07 Oct 2023 12:55:37 AM UTC: 
 sudoku.c | 42 ++++++++++++++++--------------------------
 1 file changed, 16 insertions(+), 26 deletions(-)
 tests:  6|2
total_score: 45/70
54c89fc
Sat 07 Oct 2023 12:55:53 AM UTC: 
 sudoku.c | 32 +++-----------------------------
 1 file changed, 3 insertions(+), 29 deletions(-)
 tests:  3|3
total_score: 25/70
5e27b71
Sat 07 Oct 2023 12:56:00 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:3: error: ‘cdscas’ undeclared (first use in this function)
   57 |   cdscas
      |   ^~~~~~
sudoku.c:57:3: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:9: error: expected ‘;’ before ‘return’
   57 |   cdscas
      |         ^
      |         ;
   58 |   return 1;
      |   ~~~~~~ 
sudoku.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ef5bd87
Sat 07 Oct 2023 01:10:15 AM UTC: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:77:44: error: expected ‘;’ before ‘}’ token
   77 |       sub_matriz[sub_matriz_ind][valor] = 1
      |                                            ^
      |                                            ;
   78 |     }
      |     ~                                       
Compilation failed
b472ca9
Sat 07 Oct 2023 01:10:21 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
069da9e
Sat 07 Oct 2023 01:13:45 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
8727a64
Sat 07 Oct 2023 01:15:04 AM UTC: 
 sudoku.c | 41 ++++++++++++++++++++---------------------
 1 file changed, 20 insertions(+), 21 deletions(-)
 tests:  6|2
total_score: 45/70
929f6e2
